--- a/css/style.css
+++ b/css/style.css
@@ -10856,3 +10856,20 @@ h5,
   justify-content: center;
   flex-direction: column;
 }
+.content-container {
+  text-align: center;
+  max-width: 1200px;
+  padding: 20px;
+  margin: auto; /* Center the content container */
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.content-container h1 {
+  color: #333;
+}
+
+.content-container p {
+  color: #555;
+}
